--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,9 @@ jekyll-archives:
     # day: day-archive
     # tag: category-archive
 
+exclude:
+  - README.md
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
